--- a/portfolio_66/css/styles_66.css
+++ b/portfolio_66/css/styles_66.css
@@ -169,9 +169,13 @@ h4 {
   max-width: 1170px;
 }
 
+h3 {
+  opacity: 1;
+}
+
 .portfolio-tiles {
   margin: 0 auto;
-  width: 75vw;
+  width: 100vw;
 }
 .portfolio-tiles-logo {
   justify-content: center;
@@ -184,8 +188,14 @@ h4 {
   max-width: 600px;
   height: auto;
 }
+.portfolio-tiles-header {
+  width: 55vw;
+  margin: 0 auto;
+  margin-top: 3rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
 .portfolio-tiles-img {
-  width: 45vw;
+  width: 55vw;
   margin: 0 auto;
   margin-top: 1.5rem;
   display: grid;
@@ -235,6 +245,4 @@ h4 {
 }
 .portfolio-tiles-img button:hover {
   opacity: 1;
-}
-
-/*# sourceMappingURL=styles_66.css.map */
+}/*# sourceMappingURL=styles_66.css.map */
