--- a/portfolio_66/scss/styles_66.scss
+++ b/portfolio_66/scss/styles_66.scss
@@ -1,8 +1,12 @@
 @use  'global';
 
+h3{
+    opacity: 1;
+}
+
 .portfolio-tiles{
     margin: 0 auto;
-    width: 75vw;
+    width: 100vw;
     &-logo{
         justify-content: center;
         align-items: center;
@@ -13,9 +17,15 @@
         display: block;
         max-width: 600px;
         height: auto;
-    }   
+    }  
+    &-header{
+        width: 55vw;
+        margin: 0 auto;
+        margin-top: 3rem;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    } 
     &-img{
-        width: 45vw;
+        width: 55vw;
         margin: 0 auto;
         margin-top: 1.5rem;
         display: grid;
