--- a/scss/_global_66.scss
+++ b/scss/_global_66.scss
@@ -1,6 +1,8 @@
 :root{
     /* color blue */
     --clr-blue-navgb:#577db7;
+    --clr-primary-5: hsl(42, 78%, 60%);
+    --clr-primary-6: hsl(43, 89%, 70%);
 }
 
 *,
@@ -22,4 +24,10 @@ ul{
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 200vh;
+}
+
+.underline{
+    width: 5rem;
+    height: 0.25rem;
+    background-color: var(--clr-primary-5);
 }
