--- a/scss/Project_66.scss
+++ b/scss/Project_66.scss
@@ -27,6 +27,7 @@ nav
         left: 5rem;
     }
     &-links{
+        
         margin-right: 10rem;
         display: flex;
         gap: 2rem;
@@ -61,8 +62,68 @@ nav
         }
         
     }
+
     .underline{
         width: 0;
         
+    }
+}
+
+.nav-fix{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 60px;
+    opacity: 0.6;
+    box-shadow: var(--light-shadow);
+    z-index: 5;
+}
+
+
+
+.drop-list{
+    display: inline-block;
+    border-radius: 5px;
+    
+    .nav-form{
+        display: none;
+        position: absolute;
+        background-color: var(--clr-blue-lightblue-t);
+        z-index: 5;
+        
+        a{
+            padding: 1.2rem;
+            width: 100%;
+            
+        }
+    }
+    
+    &:hover .nav-form{
+        
+        a{
+            font-size: 1rem;
+            color: var(--clr-grey-5);
+        }
+        display: flex;
+        flex-direction: column;
+        &:hover{
+            display: flex;
+        }
+        & a:hover{
+            background-color: var(--clr-blue-lightblue2-t);
+            border-color: var(--clr-grey-2);
+            color: rgb(255, 0, 0);
+            transition-timing-function: linear;
+            transition-duration: 0.5s;
+            transform-origin: left;
+            
+        }
+    }
+    &:hover .underline{
+        margin-bottom: 0.5rem;
+    }
+    &:hover{
+        margin-top: 0.5rem;
     }
 }
