--- a/scss/_global_66.scss
+++ b/scss/_global_66.scss
@@ -1,8 +1,20 @@
 :root{
     /* color blue */
     --clr-blue-navgb:#577db7;
+    --clr-blue-lightblue:#e5eaf1;
+    --clr-blue-lightblue2:#c1cddf;
+    --clr-blue-navgb-t:#577db7;
+    --clr-blue-lightblue-t:rgb(229, 234, 241,0.3);
+    --clr-blue-lightblue2-t:rgb(193, 205, 223,0.3);
     --clr-primary-5: hsl(42, 78%, 60%);
     --clr-primary-6: hsl(43, 89%, 70%);
+    --clr-primary-8: hsl(45, 86%, 81%);
+    --clr-primary-10: hsl(45, 100%, 96%);
+    --clr-grey-2: hsl(211, 39%, 23%);
+    --clr-grey-4: hsl(209, 28%, 39%);
+    --clr-grey-5: hsl(210, 22%, 49%);
+    --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 *,
