--- a/css/Project_66.css
+++ b/css/Project_66.css
@@ -105,6 +105,39 @@ nav
 .nav .underline {
   width: 0;
 }
+.nav-btn {
+  display: none;
+}
+@media screen and (max-width: 1100px) {
+  .nav a {
+    font-size: 15px;
+  }
+  .nav-links {
+    gap: 1rem;
+  }
+}
+@media screen and (max-width: 996) {
+  .nav a {
+    font-size: 10px;
+  }
+  .nav-links {
+    gap: 0.5rem;
+  }
+}
+@media screen and (max-width: 850px) {
+  .nav-btn {
+    display: block;
+    margin-right: 2rem;
+    border-color: transparent;
+    background-color: transparent;
+    font-size: 1.8rem;
+    color: white;
+    cursor: pointer;
+  }
+  .nav-links {
+    display: none;
+  }
+}
 
 .nav-fix {
   position: fixed;
