--- a/css/Project_66.css
+++ b/css/Project_66.css
@@ -36,6 +36,7 @@ ul {
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   height: 200vh;
+  background-color: var(--clr-primary-10);
 }
 
 .underline {
@@ -50,6 +51,7 @@ nav
 =======================
 */
 .nav {
+  z-index: 2;
   text-align: justify;
   background-color: var(--clr-blue-navgb);
   display: flex;
@@ -109,6 +111,9 @@ nav
   display: none;
 }
 @media screen and (max-width: 1100px) {
+  .nav {
+    height: 60px;
+  }
   .nav a {
     font-size: 15px;
   }
@@ -118,6 +123,7 @@ nav
 }
 @media screen and (max-width: 996) {
   .nav a {
+    height: 60px;
     font-size: 10px;
   }
   .nav-links {
@@ -158,7 +164,7 @@ nav
   display: none;
   position: absolute;
   background-color: var(--clr-blue-lightblue-t);
-  z-index: 5;
+  z-index: 1;
 }
 .drop-list .nav-form a {
   padding: 1.2rem;
@@ -188,4 +194,58 @@ nav
 }
 .drop-list:hover {
   margin-top: 0.5rem;
+}
+
+/*
+=======================
+sidebar
+=======================
+*/
+.sidebar {
+  z-index: 1;
+  position: fixed;
+  left: 0;
+  top: 60px;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.7);
+  transition: all 0.4s linear;
+  transform: translateY(-100%);
+}
+.sidebar-links {
+  display: grid;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  font-size: 2rem;
+  gap: 2rem;
+  margin-left: 3rem;
+  font-weight: bold;
+}
+.sidebar-links a {
+  color: var(--clr-blue-navgb);
+}
+.sidebar i {
+  color: var(--clr-blue-navgb);
+  margin-left: 1rem;
+  font-size: 1.2rem;
+}
+.sidebar li {
+  display: grid;
+  grid-template-columns: 130px 1fr;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+}
+
+.show-sidebar {
+  transform: translateY(0);
+}
+
+.close-btn {
+  display: none;
+  margin-right: 2rem;
+  border-color: transparent;
+  background-color: transparent;
+  font-size: 1.8rem;
+  color: white;
+  cursor: pointer;
 }/*# sourceMappingURL=Project_66.css.map */
