--- a/scss/_global_66.scss
+++ b/scss/_global_66.scss
@@ -36,6 +36,7 @@ ul{
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 200vh;
+    background-color: var(--clr-primary-10);
 }
 
 .underline{
