### link to personal ling ig and facebook with icons

--- a/scss/_global_66.scss
+++ b/scss/_global_66.scss
@@ -1,5 +1,6 @@
 :root{
     /* color blue */
+    --clr-blue-dark:#375a8f;
     --clr-blue-navgb:#577db7;
     --clr-blue-lightblue:#e5eaf1;
     --clr-blue-lightblue2:#c1cddf;
