--- a/css/Project_66.css
+++ b/css/Project_66.css
@@ -1,5 +1,6 @@
 :root {
   /* color blue */
+  --clr-blue-dark:#375a8f;
   --clr-blue-navgb:#577db7;
   --clr-blue-lightblue:#e5eaf1;
   --clr-blue-lightblue2:#c1cddf;
@@ -130,7 +131,7 @@ nav
     gap: 0.5rem;
   }
 }
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 870px) {
   .nav-btn {
     display: block;
     margin-right: 2rem;
@@ -151,7 +152,7 @@ nav
   top: 0;
   width: 100%;
   height: 60px;
-  opacity: 0.6;
+  opacity: 0.8;
   box-shadow: var(--light-shadow);
   z-index: 5;
 }
@@ -209,7 +210,7 @@ sidebar
   width: 100%;
   background-color: rgba(255, 255, 255, 0.7);
   transition: all 0.4s linear;
-  transform: translateY(-100%);
+  transform: translateY(-120%);
 }
 .sidebar-links {
   display: grid;
@@ -248,4 +249,29 @@ sidebar
   font-size: 1.8rem;
   color: white;
   cursor: pointer;
+}
+
+/*
+=======================
+contact
+=======================
+*/
+.contact {
+  width: 200px;
+  position: fixed;
+  display: flex;
+  bottom: 2rem;
+  right: 2rem;
+  color: var(--clr-blue-dark);
+  font-size: 2rem;
+}
+.contact i {
+  transition: all 0.5s ease-in-out;
+  padding: 1rem 0.6rem;
+}
+.contact i:hover {
+  color: palevioletred;
+}
+.contact a {
+  color: var(--clr-blue-dark);
 }/*# sourceMappingURL=Project_66.css.map */
