--- a/scss/Project_66.scss
+++ b/scss/Project_66.scss
@@ -89,7 +89,7 @@ nav
             gap: 0.5rem;
         }
     }
-    @media screen and (max-width:850px) {
+    @media screen and (max-width:870px) {
         &-btn{
             display: block;
             margin-right: 2rem;
@@ -112,12 +112,10 @@ nav
     top: 0;
     width: 100%;
     height: 60px;
-    opacity: 0.6;
+    opacity: 0.8;
     box-shadow: var(--light-shadow);
     z-index: 5;
 }
-
-
 
 .drop-list{
     display: inline-block;
@@ -165,6 +163,8 @@ nav
 }
 
 
+
+
 /*
 =======================
 sidebar
@@ -179,7 +179,7 @@ sidebar
     width: 100%;
     background-color:rgb(255, 255, 255, 0.7);
     transition: all 0.4s linear;
-    transform: translateY(-100%);
+    transform: translateY(-120%);
 
     
     &-links{
@@ -221,4 +221,34 @@ sidebar
     font-size: 1.8rem;
     color: white;
     cursor: pointer;
+}
+
+
+
+
+/*
+=======================
+contact
+=======================
+*/
+
+.contact{
+    width: 200px;
+    
+    position: fixed;
+    display: flex;
+    bottom: 2rem;
+    right: 2rem;
+    color: var(--clr-blue-dark);
+    font-size: 2rem;
+    i{
+        transition: all 0.5s ease-in-out;
+        padding: 1rem 0.6rem;
+        &:hover{
+            color: palevioletred;
+        }
+    }
+    a{
+        color: var(--clr-blue-dark);
+    }
 }
