--- a/css/Project_66.css
+++ b/css/Project_66.css
@@ -37,7 +37,6 @@ ul {
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   height: 200vh;
-  background-color: var(--clr-primary-10);
 }
 
 .underline {
@@ -131,7 +130,7 @@ nav
     gap: 0.5rem;
   }
 }
-@media screen and (max-width: 870px) {
+@media screen and (max-width: 850px) {
   .nav-btn {
     display: block;
     margin-right: 2rem;
@@ -212,6 +211,9 @@ sidebar
   transition: all 0.4s linear;
   transform: translateY(-120%);
 }
+.sidebar .underline {
+  width: 0;
+}
 .sidebar-links {
   display: grid;
   padding-top: 3rem;
@@ -230,11 +232,27 @@ sidebar
   font-size: 1.2rem;
 }
 .sidebar li {
-  display: grid;
-  grid-template-columns: 130px 1fr;
-  justify-content: center;
+  width: fit-content;
+}
+.sidebar li .sidebar-link {
+  display: flex;
   align-items: center;
   vertical-align: middle;
+}
+.sidebar li:hover a {
+  transition-duration: 0.2s;
+  transform-origin: left;
+  color: red;
+}
+.sidebar li:hover i {
+  transition-duration: 0.2s;
+  transform-origin: left;
+  color: red;
+}
+.sidebar li:hover .underline {
+  width: 100%;
+  transition-duration: 0.7s;
+  transform-origin: left;
 }
 
 .show-sidebar {
@@ -274,4 +292,34 @@ contact
 }
 .contact a {
   color: var(--clr-blue-dark);
+}
+
+/*
+=======================
+index
+=======================
+*/
+.index {
+  overflow: hidden;
+}
+.index::before {
+  content: "";
+  position: absolute;
+  top: 80px;
+  width: 100%;
+  height: 100vh;
+  background-image: url("../img/bg.png");
+  opacity: 0.25;
+}
+
+@media screen and (max-width: 1100px) {
+  .index {
+    content: "";
+    position: absolute;
+    top: 60px;
+    width: 100%;
+    height: calc(100vh - 60px);
+    background-image: url("../img/bg.png");
+    opacity: 0.25;
+  }
 }/*# sourceMappingURL=Project_66.css.map */
