--- a/scss/_global_66.scss
+++ b/scss/_global_66.scss
@@ -11,11 +11,19 @@
     --clr-primary-6: hsl(43, 89%, 70%);
     --clr-primary-8: hsl(45, 86%, 81%);
     --clr-primary-10: hsl(45, 100%, 96%);
+    --clr-grey-1: hsl(209, 61%, 16%);
     --clr-grey-2: hsl(211, 39%, 23%);
+    --clr-grey-3: hsl(209, 34%, 30%);
     --clr-grey-4: hsl(209, 28%, 39%);
     --clr-grey-5: hsl(210, 22%, 49%);
+    --clr-grey-6: hsl(209, 23%, 60%);
+    --clr-grey-7: hsl(211, 27%, 70%);
+    --clr-grey-8: hsl(210, 31%, 80%);
+    --clr-grey-9: hsl(212, 33%, 89%);
+    --clr-grey-10: hsl(210, 36%, 96%);
     --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    --transition: all 0.3s linear;
 }
 
 *,
@@ -36,11 +44,33 @@ ul{
 
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 200vh;
 }
 
 .underline{
     width: 5rem;
     height: 0.25rem;
     background-color: var(--clr-primary-5);
+}
+
+.content-section{
+    position: absolute;
+    width: 100%;
+    height: calc(100vh);
+    padding-top: 7rem;
+    padding-left: 7rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    h2{
+        font-size: 3rem;
+        color: var(--clr-grey-3);
+        letter-spacing: 0.2rem;
+        margin-bottom: 1rem;
+    }
+    h3{
+        color: var(--clr-grey-7);
+        letter-spacing: 0.1rem;
+        margin-top: 1.5rem;
+    }
+    .underline{
+        width: 500px;
+    }
 }
