--- a/scss/_global_66.scss
+++ b/scss/_global_66.scss
@@ -24,6 +24,7 @@
     --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     --transition: all 0.3s linear;
+    --clr-green-10:hsl(127, 35%, 90%);
 }
 
 *,
