--- a/scss/Project_66.scss
+++ b/scss/Project_66.scss
@@ -291,9 +291,6 @@ index
     display: grid;
     grid-template-columns: 40% 60%;
     overflow: hidden;
-    
-    
-    
 }
 
 @media screen and (max-width:1100px) {
@@ -324,6 +321,9 @@ portfolio
 */
 .portfolio_c{
     top: calc(100vh + 80px);
+    height: 100vh;
+    position: relative;
+    
     h4{
         color: var(--clr-grey-5);
         font-size: 1.2rem;
@@ -338,13 +338,16 @@ portfolio
     .c_button{
         position: relative;
         margin: 1rem;
-        margin-left: 4rem;
-        text-align: center;
+        margin-left: 3rem;
         max-width: 14rem;
+        display: grid;
+        text-align: center;
+        place-items: center;
+        margin-bottom: 2rem;
         background-color: var(--clr-grey-10);
-        padding: 1.5rem 1.5rem;
+        padding: 1.2rem 1rem;
         border-radius: 3px;
-        box-shadow: var(--light-shadow);
+        box-shadow: var(--dark-shadow);
         &::after{
             content: "";
             position: absolute;
@@ -352,15 +355,15 @@ portfolio
             top: 0;
             width: 100%;
             height: 100%;
-            border: 0.33rem solid white;
+            border: 0.25rem inset white;
             border-radius: 3px;
-            transition: all 0.5s linear;
+            transition: all 0.3s linear;
             opacity: 0;
             transform: scale(0,0);
         }
         &:hover::after{
             opacity: 0.7;
-            transform: scale(0.9);
+            transform: scale(1);
             
         }
         &:hover{
@@ -414,6 +417,8 @@ portfolio
     img{
         margin-top: 2rem;
         margin: 0 auto;
+        max-width: 400px;
+        object-fit: cover;
     }
     &-container{
         margin-top: 2rem;
@@ -433,6 +438,7 @@ portfolio
             &:hover{
                 background-color: antiquewhite;
             }
+            width: fit-content;
         }
     }
     .underline{
@@ -441,4 +447,15 @@ portfolio
         background-color: var(--clr-grey-8);
         margin-bottom: 0.5rem;
     }
+    .c_header{
+        display: grid;
+        grid-template-columns: max-content max-content;
+        place-items: center;
+        p{
+            padding-left: 2rem;
+            font-size: 1.2rem;
+            font-weight: bold;
+        }
+    }
 }
+
