--- a/css/Project_66.css
+++ b/css/Project_66.css
@@ -57,8 +57,8 @@ body {
   position: absolute;
   width: 100%;
   height: 100vh;
-  padding-top: 7rem;
-  padding-left: 7rem;
+  padding-top: 3rem;
+  padding-left: 3rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .content-section h2 {
@@ -331,6 +331,7 @@ index
 =======================
 */
 .index {
+  margin-top: 3rem;
   display: grid;
   grid-template-columns: 40% 60%;
   overflow: hidden;
@@ -356,7 +357,7 @@ portfolio
 =======================
 */
 .portfolio_c {
-  top: calc(100vh + 80px);
+  top: 80px;
   height: 100vh;
   position: relative;
 }
@@ -415,7 +416,7 @@ portfolio
   margin-bottom: 2rem;
 }
 .portfolio_c-center {
-  padding: 4rem 0;
+  padding: 1rem;
 }
 .portfolio_c-container {
   padding-right: 10rem;
@@ -449,13 +450,12 @@ portfolio
   letter-spacing: 0.15rem;
 }
 .port img {
-  margin-top: 2rem;
   margin: 0 auto;
   max-width: 400px;
   object-fit: cover;
 }
 .port-container {
-  margin-top: 2rem;
+  margin-top: 1rem;
   display: grid;
   grid-template-columns: 30% 70%;
 }
@@ -468,7 +468,7 @@ portfolio
   color: rgb(212, 137, 102);
 }
 .port .commentarys .commentary {
-  padding: 1rem;
+  padding-bottom: 1rem;
   width: fit-content;
 }
 .port .commentarys .commentary:hover {
