--- a/css/Project_66.css
+++ b/css/Project_66.css
@@ -451,6 +451,7 @@ portfolio
 }
 .port img {
   margin: 0 auto;
+  margin-top: 2rem;
   max-width: 400px;
   object-fit: cover;
 }
@@ -463,12 +464,12 @@ portfolio
   padding-left: 7rem;
 }
 .port .commentarys p {
-  padding-left: 2rem;
+  padding-left: 1.5rem;
   font-weight: bold;
   color: rgb(212, 137, 102);
 }
 .port .commentarys .commentary {
-  padding-bottom: 1rem;
+  padding: 2rem;
   width: fit-content;
 }
 .port .commentarys .commentary:hover {
