--- a/css/Project_66.css
+++ b/css/Project_66.css
@@ -377,9 +377,10 @@ portfolio
   margin: 1rem;
   margin-left: 3rem;
   max-width: 14rem;
-  display: grid;
+  display: flex;
   text-align: center;
-  place-items: center;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 2rem;
   background-color: var(--clr-grey-10);
   padding: 1.2rem 1rem;
@@ -417,6 +418,8 @@ portfolio
 }
 .portfolio_c-center {
   padding: 1rem;
+  width: 100%;
+  margin-top: 2rem;
 }
 .portfolio_c-container {
   padding-right: 10rem;
@@ -424,6 +427,7 @@ portfolio
   display: grid;
   grid-template-columns: 20% 80%;
   height: 80vh;
+  width: 100vw;
 }
 @media screen and (max-width: 1300px) {
   .portfolio_c h2 {
@@ -433,7 +437,115 @@ portfolio
     font-size: 1rem;
   }
   .portfolio_c .c_button {
+    padding: 0.8rem 0.8rem;
+  }
+  .portfolio_c .c_button {
+    width: 100%;
+    height: fit-content;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .portfolio_c h2 {
+    font-size: 2rem;
+  }
+  .portfolio_c h4 {
+    font-size: 1rem;
+  }
+  .portfolio_c .c_button {
+    padding: 0.8rem 0.8rem;
+  }
+  .portfolio_c-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .portfolio_c-option {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 1.5rem;
+  }
+  .portfolio_c .c_button {
+    width: 100%;
+    height: fit-content;
+    margin-bottom: 0;
+  }
+}
+@media screen and (max-width: 996px) {
+  .portfolio_c h2 {
+    font-size: 2rem;
+  }
+  .portfolio_c h4 {
+    font-size: 1rem;
+  }
+  .portfolio_c .c_button {
     padding: 1rem 0.8rem;
+  }
+  .portfolio_c-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .portfolio_c-option {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 1.5rem;
+  }
+  .portfolio_c .c_button {
+    width: 100%;
+    height: fit-content;
+  }
+}
+@media screen and (max-width: 850px) {
+  .portfolio_c h2 {
+    font-size: 2rem;
+  }
+  .portfolio_c h4 {
+    font-size: 0.7rem;
+  }
+  .portfolio_c .c_button {
+    padding: 1rem 0.8rem;
+  }
+  .portfolio_c-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .portfolio_c-option {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1.5rem;
+  }
+  .portfolio_c .c_button {
+    width: 100%;
+    height: fit-content;
+  }
+}
+@media screen and (max-width: 768px) {
+  .portfolio_c h2 {
+    font-size: 1rem;
+  }
+  .portfolio_c h4 {
+    font-size: 8px;
+  }
+  .portfolio_c-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .portfolio_c-option {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+  }
+  .portfolio_c .c_button {
+    padding: 0.5rem;
+    margin: 0;
+    width: 80px;
+    height: 40px;
+  }
+  .portfolio_c .c_button p {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  .portfolio_c .underline {
+    width: 80%;
   }
 }
 
@@ -502,7 +614,7 @@ portfolio
   font-size: 1.2rem;
   font-weight: bold;
 }
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1100px) {
   .port img {
     max-width: 200px;
   }
@@ -527,5 +639,55 @@ portfolio
     font-weight: bold;
   }
 }
-
-/*# sourceMappingURL=Project_66.css.map */
+@media screen and (max-width: 996px) {
+  .port img {
+    max-width: 200px;
+  }
+  .port h4 {
+    font-size: 1rem;
+  }
+  .port h3 {
+    font-size: 1rem;
+  }
+  .port p {
+    font-size: 0.8rem;
+  }
+  .port .commentarys {
+    padding-left: 3rem;
+  }
+  .port .commentarys .commentary {
+    padding: 1rem;
+  }
+  .port .c_header p {
+    padding-left: 1.5rem;
+    font-size: 1rem;
+    font-weight: bold;
+  }
+}
+@media screen and (max-width: 768px) {
+  .port img {
+    max-width: 250px;
+  }
+  .port-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .port .c_header {
+    display: flex;
+    flex-direction: column;
+  }
+  .port .c_header p {
+    margin-top: 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+  }
+  .port .commentarys {
+    padding-left: 0;
+  }
+  .port .commentarys .commentary {
+    padding: 1rem;
+  }
+  .port .commentarys p {
+    padding-left: 0;
+  }
+}/*# sourceMappingURL=Project_66.css.map */
