--- a/css/Project_66.css
+++ b/css/Project_66.css
@@ -711,7 +711,7 @@ portfolio
 
 .learns {
   position: relative;
-  top: 80px;
+  top: 100px;
   left: 2rem;
 }
 .learns h4 {
@@ -733,6 +733,7 @@ portfolio
   font-size: 1.8rem;
 }
 .learns p {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: rgb(212, 137, 102);
   font-size: 0.9rem;
   letter-spacing: 0.15rem;
@@ -746,9 +747,15 @@ portfolio
 
 .learn {
   height: fit-content;
+  margin: 0 auto;
+  width: 85vw;
+  border: 4px dashed var(--clr-grey-7);
+  padding: 2rem;
+  margin-bottom: 5rem;
+  border-radius: 20px;
+  background-color: var(--clr-grey-10);
 }
 .learn-title {
-  margin-top: 2rem;
   width: fit-content;
 }
 .learn .underline {
@@ -757,13 +764,52 @@ portfolio
 }
 .learn-container {
   padding: 1rem;
-  margin-bottom: 1rem;
   width: fit-content;
+  margin-bottom: 1rem;
 }
 .learn-container:hover {
   background-color: blanchedalmond;
   border: 2px dashed var(--clr-grey-5);
   border-radius: 4px;
+}
+
+.overcome {
+  position: relative;
+}
+.overcome p {
+  font-size: 1rem;
+  font-weight: bolder;
+  color: rgb(185, 124, 54);
+}
+.overcome .learn-container {
+  background-color: blanchedalmond;
+  border: 2px dashed var(--clr-grey-5);
+  border-radius: 4px;
+  width: 80vw;
+}
+.overcome h4 {
+  padding: 0.5rem 1rem;
+  background-color: var(--clr-grey-4);
+  box-shadow: none;
+  color: white;
+}
+
+.learn-container-title {
+  position: relative;
+}
+.learn-container-title::after {
+  content: "";
+  position: absolute;
+  width: calc(100% + 5px);
+  height: calc(100% + 5px);
+  left: -2.5px;
+  top: -2.5px;
+  border: 5px dotted blanchedalmond;
+}
+
+.question {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 300px);
 }
 
 .dropleft {
@@ -792,6 +838,4 @@ portfolio
 }
 .dropleft a:hover {
   color: red;
-}
-
-/*# sourceMappingURL=Project_66.css.map */
+}/*# sourceMappingURL=Project_66.css.map */
