--- a/scss/Project_66.scss
+++ b/scss/Project_66.scss
@@ -702,7 +702,7 @@ portfolio
 
 .learns{
     position: relative;
-    top: 80px;
+    top: 100px;
     left: 2rem;
     h4{
         background-color: var(--clr-green-10);
@@ -723,6 +723,7 @@ portfolio
         font-size: 1.8rem;
     }
     p{
+        font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         color: rgb(212, 137, 102);
         font-size: 0.9rem;
         letter-spacing: 0.15rem;
@@ -737,8 +738,14 @@ portfolio
 
 .learn{
     height: fit-content;
+    margin: 0 auto;
+    width: 85vw;
+    border: 4px dashed var(--clr-grey-7);
+    padding: 2rem;
+    margin-bottom: 5rem;
+    border-radius: 20px;
+    background-color: var(--clr-grey-10);
     &-title{
-        margin-top: 2rem;
         width: fit-content;
     }
     .underline{
@@ -747,8 +754,8 @@ portfolio
     }
     &-container{
         padding: 1rem;
-        margin-bottom: 1rem;
         width: fit-content;
+        margin-bottom: 1rem;
         &:hover{
             background-color: blanchedalmond;
             border: 2px dashed var(--clr-grey-5);
@@ -756,6 +763,48 @@ portfolio
         }
     }
     
+}
+
+.overcome{
+    position: relative;
+    p{
+        font-size: 1rem;
+        font-weight: bolder;
+        color: rgb(185, 124, 54);
+    }
+    .learn-container{
+        background-color: blanchedalmond;
+        border: 2px dashed var(--clr-grey-5);
+        border-radius: 4px;
+        width: 80vw;
+    }
+    h4{
+        padding: 0.5rem 1rem;
+        background-color: var(--clr-grey-4);
+        box-shadow: none;
+        color: white;
+        
+    }
+
+}
+
+.learn-container-title{
+    position: relative;
+    &::after{
+        content: '';
+        position: absolute;
+        width: calc(100% + 5px);
+        height: calc(100% + 5px);
+        left: -2.5px;
+        top: -2.5px;
+        border: 5px dotted blanchedalmond;
+    }
+}
+
+
+.question{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,300px);
 }
 
 .dropleft{
