--- a/scss/Project_66.scss
+++ b/scss/Project_66.scss
@@ -776,7 +776,8 @@ portfolio
         background-color: blanchedalmond;
         border: 2px dashed var(--clr-grey-5);
         border-radius: 4px;
-        width: 80vw;
+        width: 95%;
+        margin: 0 auto;
     }
     h4{
         padding: 0.5rem 1rem;
