--- a/css/Project_66.css
+++ b/css/Project_66.css
@@ -785,7 +785,8 @@ portfolio
   background-color: blanchedalmond;
   border: 2px dashed var(--clr-grey-5);
   border-radius: 4px;
-  width: 80vw;
+  width: 95%;
+  margin: 0 auto;
 }
 .overcome h4 {
   padding: 0.5rem 1rem;
