--- a/scss/Project_66.scss
+++ b/scss/Project_66.scss
@@ -755,12 +755,24 @@ portfolio
     &-container{
         padding: 1rem;
         width: fit-content;
-        margin-bottom: 1rem;
         &:hover{
             background-color: blanchedalmond;
             border: 2px dashed var(--clr-grey-5);
             border-radius: 4px;
         }
+        .code{
+                background-color: rgb(214, 239, 203);
+                width: fit-content;
+                color: rgb(149, 66, 98);
+                margin-top: 2rem;
+                margin-bottom: 0.5rem;
+        }
+
+    }
+    img{
+        display: block;
+        max-width: 100%;
+        margin: 2rem 0;
     }
     
 }
@@ -778,6 +790,15 @@ portfolio
         border-radius: 4px;
         width: 95%;
         margin: 0 auto;
+        margin-bottom: 1rem;
+        &::after{
+            content: '';
+            left: -2.5px;
+            top: -2.5px;
+            width: calc(100% + 5px);
+            height: calc(100% + 5px);
+            border: 5px dotted blanchedalmond;
+        }
     }
     h4{
         padding: 0.5rem 1rem;
@@ -786,6 +807,7 @@ portfolio
         color: white;
         
     }
+    
 
 }
 
@@ -835,5 +857,25 @@ portfolio
         &:hover{
             color: red;
         }
+    }
+}
+
+.link_contect{
+    display: flex;
+    .learn-container-title{
+        &::after{
+            border: 5px dotted var(--clr-grey-10);
+        }
+    }
+    h4{
+        margin-right: 1rem;
+        font-size: 0.5rem;
+        background-color: rgb(145, 48, 29);
+        &:hover{
+            background-color: green;
+        }
+    }
+    @media screen and (max-width:996px) {
+        display: none;
     }
 }
